feat: filter by city or state

--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,6 +1,6 @@
 html {
 	box-sizing: border-box;
-	background: #ffc600;
+	background: #d8aa04;
 	font-family: 'helvetica neue';
 	font-size: 20px;
 	font-weight: 200;
@@ -39,7 +39,6 @@ input.search {
 	margin: 0;
 	padding: 0;
 	position: relative;
-	/*perspective: 20px;*/
 }
   
 .suggestions li {
